--- a/eat/package.json
+++ b/eat/package.json
@@ -17,7 +17,6 @@
     "react-scripts": "5.0.1",
     "swiper": "^12.0.2",
     "tailwind-merge": "^3.3.1",
-    "tw-animate-css": "^1.4.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -48,6 +47,7 @@
     "@tailwindcss/vite": "^4.1.14",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.14"
+    "tailwindcss": "^4.1.14",
+    "tw-animate-css": "^1.4.0"
   }
 }
