--- a/eat/package.json
+++ b/eat/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.23.22",
     "lucide-react": "^0.544.0",
     "ogl": "^1.0.11",
     "react": "^19.1.1",
